--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -750,14 +750,14 @@ Indian Act</h3>
 <h4>Exempt income situation</h4>
 <div id="ajax-income-50">
 <p>The income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Employer <strong>or </strong>the employee is in one of the following situations:
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">
+<ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
 </ul>
 </li>
-<li class="cnjnctn-col">Employee performs more than 50% of their employment duties on a reserve</li>
+<li class="cnjnctn-col">Worker performs more than 50% of their employment duties on a reserve</li>
 </ul>
 <h5>Examples</h5>
 <p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
