--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -786,9 +786,9 @@ Indian Act</h3>
 <div id="ajax-income-indianband">
 <p>The income is exempt from income tax under section 87 of the Indian Act if the employer is <strong>all </strong>of the following:</p>
 
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Employer is one of the following:
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">
+<ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">An Indian band which has a reserve, or a tribal council representing one or more Indian bands that have reserves  </li>
 <li class="cnjnctn-col">An Indian organization controlled by an Indian band which has a reserve, or a tribal council representing one or more Indian bands that have reserves, and the organization is dedicated exclusively to the <a href="#ajax-def5" aria-controls="ajax-def5" class="overlay-lnk" role="button">social, cultural, educational, or economic development <span class="far fa-question-circle"></span></a> of Indians who for the most part live on reserves </li>
 </ul>
@@ -809,7 +809,7 @@ Indian Act</h3>
 <details><summary>Situation: Your employee performs <strong>at least 90%</strong> of the duties related to their employment on a reserve</summary>
 <h4>Exempt income situation</h4>
 <div id="ajax-income-90">
-<p>The status Indian individual's income is exempt from income tax under section 87 of the Indian Act if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
+<p>The income is exempt from income tax under section 87 of the Indian Act if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
 <h5>Examples</h5>
 <p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
@@ -821,7 +821,7 @@ Indian Act</h3>
 <details><summary>Situation: Your employee performs <strong>certain duties</strong> related to their employment on a reserve</summary>
 <h4>Partly-exempt income</h4>
 <div id="ajax-income-90-not">
-<p>The status Indian individual's income is partly-exempt from income tax under section 87 of the Indian Act. The exemption may be prorated only to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
+<p>The income is partly-exempt from income tax under section 87 of the Indian Act. The exemption may be prorated only to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
 
 <h5>Examples</h5>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
