--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -364,7 +364,7 @@ perform duties on a reserve, you need to consider the percentage of the work per
                       </ul>
                     </div>
                   </li>
-                  <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1b", "live": true}'>Non-employment income (for example: pension income, retiring allowances, RRSP and CPP/QPP)</li>
+                  <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1b", "live": true}'>Self-employment or business income</li>
                 </ul> </div></li>
 	<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-0b", "live": true}'>Worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
 Indian Act</li>
@@ -414,7 +414,7 @@ Indian Act</h3>
 
   <div id="ajax-1b" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
-                Non-employment income <small>for example, pension income, retiring allowances, RRSP and CPP/QPP</small></h3>
+                Self-employment or business income</h3>
 <p>Add intro here. </p> 
 <hr>
   <h4>Withholding obligations </h4>
