--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -432,7 +432,7 @@ Indian Act</h3>
 
    <div id="ajax-2c" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
-                Worker lives on a reserve and you (employer or payer) are resident on a reserve</h3>
+                Worker lives on a reserve and you (employer or payer) are resident on a reserve - Guideline 2</h3>
                <div data-ajax-replace="#ajax-ex-emp"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
@@ -450,7 +450,7 @@ Indian Act</h3>
 
   <div id="ajax-3yesa" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
-                Worker performs more than 50% of their employment duties on a reserve</h3>
+                Worker performs more than 50% of their employment duties on a reserve - Guidline 3</h3>
 	<div data-ajax-replace="#ajax-income-50"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
@@ -468,7 +468,7 @@ Indian Act</h3>
 
   <div id="ajax-3yesb" class="alert alert-info hidden ">
               <h3><small>Your result </small><br>
-                Worker performs 50% or less of their employment duties on a reserve</h3>
+                Worker performs 50% or less of their employment duties on a reserve - Guideline 1 (proration rule)</h3>
               <div data-ajax-replace="#ajax-prorate-income"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
@@ -486,7 +486,7 @@ Indian Act</h3>
 
 <div id="ajax-3nota" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
-                Worker performs more than 50% of their employment duties on a reserve</h3>
+                Worker performs more than 50% of their employment duties on a reserve - Guideline 3</h3>
 	<div data-ajax-replace="#ajax-income-50"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
@@ -504,7 +504,7 @@ Indian Act</h3>
 
   <div id="ajax-3notb" class="alert alert-info hidden ">
               <h3><small>Your result </small><br>
-               Worker performs 50% or less of their employment duties on a reserve</h3>
+               Worker performs 50% or less of their employment duties on a reserve - Guideline 1 (proration rule)</h3>
               <div data-ajax-replace="#ajax-prorate-income"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
@@ -522,7 +522,7 @@ Indian Act</h3>
            
     <div id="ajax-3notc" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
-                You are an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</h3>
+                You are an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves - Guideline 4</h3>
 	<div data-ajax-replace="#ajax-income-indianband"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
@@ -540,7 +540,7 @@ Indian Act</h3>
 
    <div id="ajax-4nota" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
-                Worker performs at least 90% of their employment duties on a reserve</h3>
+                Worker performs at least 90% of their employment duties on a reserve - Guideline 1</h3>
               <div data-ajax-replace="#ajax-income-90"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
@@ -559,7 +559,7 @@ Indian Act</h3>
 
             <div id="ajax-4notb" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
-               Worker performs less than 90% of their employment duties on a reserve</h3>
+               Worker performs less than 90% of their employment duties on a reserve - Guideline 1 (proration rule)</h3>
                  <div data-ajax-replace="#ajax-income-90-not"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
@@ -795,11 +795,11 @@ Indian Act</h3>
 </li>
 <li class="cnjnctn-col">Employee's duties of employment are in connection with the employer's non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>
 </ul>
-</div>
+
 <h5>Examples</h5>
 <p> <a href="#ajax-example4a" aria-controls="ajax-example4a" class="overlay-lnk" role="button">Examples where exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example4b" aria-controls="ajax-example4b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
-
+</div>
 
 </details>
 </li>
