--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -618,10 +618,10 @@ Indian Act</h3>
   <li>
 <h3 id="step2a">Determine the residency of the worker</h3>
 
-<details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve </summary>
+<details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve - Guideline 2</summary>
 <h4>Exempt income situation</h4>
  <div id="ajax-ex-emp">
-<p>The income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
+<p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
@@ -632,17 +632,15 @@ Indian Act</h3>
 </div>
 
 <p>Where an employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
-
-
 </details>
 
 <details><summary>Situation: Other situations where your employee is required to perform duties on a reserve</summary>
 <p>Depending on your situation, the employment income of status Indians may be exempt or partly exempt from tax. It is the income that is exempt from tax and not the person. </p>
 <p>The rules for CPP and EI are different. EI premiums are always required. Income that is exempt from income tax is not pensionable employment although you or the employee may elect into the CPP.</p>
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To determine if the income is exempt or partly from tax in this situation, continue to: <a href="#h_3">Step 3: Determine the percentage of duties related to employment on a reserve</a>.</p>
-
 </details>
 </li>
+
 <li><h3 id="step3">Determine the residency of the payer</h3>
 <p>Info to be transfered here later, just trying to find the appropriate structure.</p>
 </li>
@@ -744,12 +742,12 @@ Indian Act</h3>
             </ul>
 
 <ol class="lst-stps-sub">
-<li><h5 id="3a">Employee lives on a reserve <strong>or</strong> you are a resident on a reserve</h5>            
 
-<details><summary>Situation: Your employee performs <strong>more than 50%</strong> of their employment duties on a reserve</summary>
+<li><h5 id="3a">Employee lives on a reserve <strong>or</strong> you are a resident on a reserve</h5>            
+<details><summary>Situation: Your employee performs <strong>more than 50%</strong> of their employment duties on a reserve - Guideline 3</summary>
 <h4>Exempt income situation</h4>
 <div id="ajax-income-50">
-<p>The income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
+<p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
@@ -763,13 +761,13 @@ Indian Act</h3>
 <p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 </div>
-
 </details>
 
-<details><summary>Situation: Your employee performs <strong>50% or less</strong> of their employment duties on a reserve</summary>
+<details><summary>Situation: Your employee performs <strong>50% or less</strong> of their employment duties on a reserve - Guideline 1 (proration rule)</summary>
 <h4>Partly-exempt income</h4>
  <div id="ajax-prorate-income">
-<p>The income is partly-exempt from income tax under section 87 of the Indian Act if if the employee performs 50% or less of their employment duties on a reserve. The exemption may be prorated where those duties are not merely incidental to duties they performed off a reserve. The exemption will apply only to the portion of the income related to the duties the employee performed on the reserve if <strong>one </strong>of the following apply: </p>
+<p>Generally, the income is partly-exempt from income tax if the employee performs 50% or less of their employment duties on a reserve. 
+<p>The exemption is prorated where those duties are not merely incidental to duties they performed off a reserve. The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if <strong>one </strong>of the following apply: </p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> </li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
@@ -781,10 +779,10 @@ Indian Act</h3>
 
 </details>
 
-<details><summary>You are an <strong>Indian band or organization</strong> and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</summary>
+<details><summary>You are an <strong>Indian band or organization</strong> and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves - Guideline 4</summary>
 <h3>Exempt income situation</h3>
 <div id="ajax-income-indianband">
-<p>The income is exempt from income tax under section 87 of the Indian Act if the employer is <strong>all </strong>of the following:</p>
+<p>Generally, the income is exempt from income tax if the employer is <strong>all </strong>of the following:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
@@ -806,10 +804,10 @@ Indian Act</h3>
 
 <li><h5 id="3b">Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve</h5>
 
-<details><summary>Situation: Your employee performs <strong>at least 90%</strong> of the duties related to their employment on a reserve</summary>
+<details><summary>Situation: Your employee performs <strong>at least 90%</strong> of the duties related to their employment on a reserve - Guideline 1</summary>
 <h4>Exempt income situation</h4>
 <div id="ajax-income-90">
-<p>The income is exempt from income tax under section 87 of the Indian Act if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
+<p>Generally, the income is exempt from income tax if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
 <h5>Examples</h5>
 <p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
@@ -818,10 +816,11 @@ Indian Act</h3>
 
 </details>
 
-<details><summary>Situation: Your employee performs <strong>certain duties</strong> related to their employment on a reserve</summary>
+<details><summary>Situation: Your employee performs <strong>certain duties</strong> related to their employment on a reserve - Guideline 1 (proration rule)</summary>
 <h4>Partly-exempt income</h4>
 <div id="ajax-income-90-not">
-<p>The income is partly-exempt from income tax under section 87 of the Indian Act. The exemption may be prorated only to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
+<p>Generally, the income is partly-exempt from income tax. </p>
+<p>The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
 
 <h5>Examples</h5>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
