--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -365,6 +365,7 @@ perform duties on a reserve, you need to consider the percentage of the work per
                     </div>
                   </li>
                   <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1b", "live": true}'>Self-employment or business income</li>
+ <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1c", "live": true}'>Non-employment income (for example: pension income, retiring allowances, RRSP and CPP/QPP)</li>
                 </ul> </div></li>
 	<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-0b", "live": true}'>Worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
 Indian Act</li>
@@ -416,6 +417,24 @@ Indian Act</h3>
               <h3><small>Your result </small><br>
                 Self-employment or business income</h3>
 <p>Add intro here. </p> 
+<hr>
+  <h4>Withholding obligations </h4>
+        <div data-ajax-replace="#ajax-t4a-withhold"></div>
+ <br>  
+<h4>Reporting obligations - T4A slip </h4>
+ <div data-ajax-replace="#ajax-t4a-report"></div>
+  
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
+</ul>
+ 
+            </div>
+
+  <div id="ajax-1c" class="alert alert-info hidden">
+              <h3><small>Your result </small><br>
+                Non-employment income for example, pension income, retiring allowances, RRSP and CPP/QPP</h3>
+ <div data-ajax-replace="#ajax-non-emp"></div>
 <hr>
   <h4>Withholding obligations </h4>
         <div data-ajax-replace="#ajax-t4a-withhold"></div>
@@ -603,6 +622,15 @@ Indian Act</h3>
 <li>Effective date of the agreements and the expiry dates from Crown-Indigenous Relations and Northern Affairs Canada (CIRNAC): <a href="https://www.rcaanc-cirnac.gc.ca/eng/1100100028568/1529354090684">Treaty and agreement negotiations</a></li>
 </ul> 
 </div>
+<details><summary>Situation: Non-employment income (for example, pension income, retiring allowances, RRSP and CPP/QPP)</summary>
+<div id="ajax-non-emp">
+<p>Generally, the worker that is receiving unemployment insurance benefits, retiring allowances, Canada Pension Plan (CPP) payments, Quebec Pension Plan (QPP) payments, Registered Pension Plan (RPP) benefits or Wage Loss Replacement Plan (WLRP) benefits is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
+
+<p>If the employment income was partly-exempt from income tax, the exemption is prorated to the portion of the these amounts.</p>
+
+<p> <a href="#ajax-example-emp-related" aria-controls="ajax-example-emp-related" class="overlay-lnk" role="button">Example non-employment income related to employment income <span class="far fa-question-circle"></span></a> </p>
+</div>
+</details>
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -1234,7 +1262,7 @@ Indian Act</h3>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example4b"></div>
 	</div></section>
 
-<section id="ajax-example-emp-related" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Employment-related income - Examples</h2>
+<section id="ajax-example-emp-related" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Non-employment income related to employment income - Examples</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example-emp-related"></div>
 	</div></section>
