--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -624,7 +624,7 @@ Indian Act</h3>
 </div>
 <details><summary>Situation: Non-employment income (for example, pension income, retiring allowances, RRSP and CPP/QPP)</summary>
 <div id="ajax-non-emp">
-<p>Generally, the worker that is receiving unemployment insurance benefits, retiring allowances, Canada Pension Plan (CPP) payments, Quebec Pension Plan (QPP) payments, Registered Pension Plan (RPP) benefits or Wage Loss Replacement Plan (WLRP) benefits is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
+<p>Generally, if the worker is receiving unemployment insurance benefits, retiring allowances, Canada Pension Plan (CPP) payments, Quebec Pension Plan (QPP) payments, Registered Pension Plan (RPP) benefits or Wage Loss Replacement Plan (WLRP) benefits is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
 
 <p>If the employment income was partly-exempt from income tax, the exemption is prorated to the portion of the these amounts.</p>
 
@@ -638,9 +638,19 @@ Indian Act</h3>
   <div id="ajax-notreg">
 <p>You must deduct CPP, EI and income tax the same as regular workers. </p> 
 <p> The exemption under section 87 only applies to a worker who is registered or entitled to be registered under the Indian Act. </p> </div></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the worker has proof of registration, continue to <a href="#step2">Step 2 - Determine if ???</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the worker has proof of registration, continue to <a href="#step2a">Step 2 - Determine if ???</a>.</li>
 </ul>
 	
+ </li>
+
+  <li>
+<h3 id="step2a">Determine if the employment income is treated differently</h3>
+ <div id="ajax-uncommon">
+<p>Depending on the situation, there are other uncommon factors that result in employment income being treated differently. This means that any factors connecting the income to a reserve must be analysed based on various court decisions to determine if the exemption applies. </p>
+<h5>Examples</h5>
+<p><a href="#ajax-uncommon1" aria-controls="ajax-uncommon1" class="overlay-lnk" role="button">Examples where exempt (uncommon situations) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-uncommon2" aria-controls="ajax-uncommon2" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (uncommon situations) <span class="far fa-question-circle"></span></a> </p>
+</div>
  </li>
 
   <li>
@@ -1265,6 +1275,16 @@ Indian Act</h3>
 <section id="ajax-example-emp-related" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Non-employment income related to employment income - Examples</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example-emp-related"></div>
+	</div></section>
+
+<section id="ajax-uncommon1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Uncommon employment income - Examples where exempt</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#example-uncommon-ex"></div>
+	</div></section>
+
+<section id="ajax-uncommon2" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Uncommon employment income - Examples where not exempt</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#example-uncommon-not"></div>
 	</div></section>
 
 
