--- a/guides/alberta/package.html
+++ b/guides/alberta/package.html
@@ -72,14 +72,14 @@
 
 <div class="mwsbodytext text parbase section">
 
-<h2>Complete tax packages</h2>
+<h2>Complete tax package</h2>
 
 <p>Each package includes the guide, the return, related schedules, and the provincial or territorial schedules, information, and forms (except Quebec).</p>
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">Income Tax Package - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 
 <summary>Previous years: Income tax packages</summary>
@@ -168,12 +168,12 @@
 
 </details>
 </div></div>
-<h2>Specific federal information</h2>
+<h2>Federal information only</h2>
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-g.html">Federal income tax and benefit information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 
 <summary>Previous years: Federal </summary>
@@ -264,13 +264,13 @@
 
 </div>
 </div>
-<h2>Specific provincial or territorial information</h2>
+<h2>Provincial or territorial information only</h2>
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 
 <p><a href="onepager-new2.html"><img src="flag-ab.jpg" class="mrgn-rght-md">Alberta tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 
 <summary>Previous years: Alberta</summary>
@@ -362,10 +362,10 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-bc.jpg" class="mrgn-rght-md">British Columbia tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: British Columbia</summary>
 <ul>
@@ -385,10 +385,10 @@
 
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-mn.jpg" class="mrgn-rght-md">Manitoba tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Manitoba</summary>
 <ul>
@@ -406,10 +406,10 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-nb.jpg" class="mrgn-rght-md">New Brunswick tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: New Brunswick</summary>
 <ul>
@@ -427,10 +427,10 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-nl.jpg" class="mrgn-rght-md">Newfoundland and Labrador tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Newfoundland and Labrador</summary>
 <ul>
@@ -448,10 +448,10 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-nt.jpg" class="mrgn-rght-md">Northwest Territories tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Northwest Territories</summary>
 <ul>
@@ -469,10 +469,10 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-ns.jpg" class="mrgn-rght-md">Nova Scotia tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Nova Scotia</summary>
 <ul>
@@ -490,10 +490,10 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-nu.jpg" class="mrgn-rght-md">Nunavut tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Nunavut</summary>
 <ul>
@@ -511,10 +511,10 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-on.jpg" class="mrgn-rght-md">Ontario tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Ontario</summary>
 <ul>
@@ -532,10 +532,10 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-pe.jpg" class="mrgn-rght-md">Prince Edward Island tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Prince Edward Island</summary>
 <ul>
@@ -553,10 +553,10 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-qc.jpg" class="mrgn-rght-md">Quebec tax information from CRA - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Quebec</summary>
 <ul>
@@ -574,10 +574,10 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-qc.jpg" class="mrgn-rght-md">Quebec tax information from Revenu Québec - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Quebec</summary>
 <ul>
@@ -594,10 +594,10 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-sk.jpg" class="mrgn-rght-md">Saskatchewan tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Saskatchewan</summary>
 <ul>
@@ -615,10 +615,10 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-pc.html"><img src="flag-yt.jpg" class="mrgn-rght-md">Yukon tax information - 2023</a></p>
 </div>
-<div class="col-md-7">
+<div class="col-md-6">
 <details>
 <summary>Previous years: Yukon</summary>
 <ul>
