--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1114,16 +1114,17 @@ Indian Act</h3>
 </li>
 <li><h3 id="h_6">Testing to combine - Withhold and report the payment on a slip</h3>
 <p class="mrgn-bttm-lg">You must withhold the following deductions and report on a slip depending on <strong>who the payment is made to</strong>:</p>
-<h4>Payment made to an employee - T4 slip</h4>
+<h4>Payment made to your employee - T4 slip</h4>
  <details><summary>Income all exempt</summary> 
 <div id="ajax-t4-how-ex-emp">
-	<p>Report on on a T4 slip payment made to an employee: </p>
+	<p>Withhold the following deductions and report on a T4 slip the payment you made to your employee: </p>
         <ul class="fa-ul">
-                     
-                
-		 <li><span class="fas fa-check fa-li text-success"></span>Code 66 – Eligible retiring allowances</li>
-		 <li><span class="fas fa-check fa-li text-success"></span>Code 69 – Indian (exempt income) – Non-eligible retiring allowances</li>
-		 <li><span class="fas fa-check fa-li text-success"></span>Code 71 – Indian (tax-exempt income) – Employment</li>
+                <li><span class="fas fa-times text-danger fa-li"></span> <strong>Do not</strong> withhold EI</li>     
+                <li><span class="fas fa-times text-danger fa-li"></span> <strong>Do not</strong> withhold CPP if the employer did not file a CPT124</li>  
+  <li><span class="fas fa-check fa-li text-success"></span> Withhold CPP on all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> election and report using box 26</li>
+   		<li><span class="fas fa-times text-danger fa-li"></span> <strong>Do not</strong> withhold income tax</li>  
+		<li><span class="fas fa-check fa-li text-success"></span>Report tax-exempt non-eligible retiring allowances using code 69</li>
+		 <li><span class="fas fa-check fa-li text-success"></span>Report tax-exempt employment income using code 71</li>
 		
                      </ul>
 	 </div>
@@ -1131,7 +1132,7 @@ Indian Act</h3>
 
  <details><summary>Income partly-exempt</summary> 
 <div id="ajax-t4-how-part-emp">
-	<p>Report on on a T4 slip payment made to an employee: </p>
+	<p>Withhold the following deductions and report on a T4 slip the payment you made to your employee: </p>
         <ul class="fa-ul">
                        <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income, on the portion of the taxable income</li>
                         <li><span class="fas fa-check fa-li text-success"></span>Box 24 - EI insurable earnings, on the portion of the taxable income</li>
