--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1118,15 +1118,21 @@ Indian Act</h3>
  <details><summary>Income all exempt</summary> 
 <div id="ajax-t4-how-ex-emp">
 	<p>Withhold the following deductions and report on a T4 slip the payment you made to your employee: </p>
-        <ul class="fa-ul">
-                <li><span class="fas fa-times text-danger fa-li"></span> <strong>Do not</strong> withhold EI</li>     
-                <li><span class="fas fa-times text-danger fa-li"></span> <strong>Do not</strong> withhold CPP if the employer did not file a CPT124</li>  
-  <li><span class="fas fa-check fa-li text-success"></span> Withhold CPP on all income if employer filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> election and report using box 26</li>
-   		<li><span class="fas fa-times text-danger fa-li"></span> <strong>Do not</strong> withhold income tax</li>  
-		<li><span class="fas fa-check fa-li text-success"></span>Report tax-exempt non-eligible retiring allowances using code 69</li>
-		 <li><span class="fas fa-check fa-li text-success"></span>Report tax-exempt employment income using code 71</li>
-		
-                     </ul>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(do not withhold)</small></li> 	 
+ <li><span class="fas fa-times text-danger fa-li"></span> EI <small class="text-muted">(do not withhold)</small></li>
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <small class="text-muted">(do not withhold if the employer did not file a CPT124)</small></li>  
+ <li><span class="fas fa-check fa-li text-success"></span> CPP if employer filed a Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> on all income</li>
+</li>
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 if you filed a Form CPT124</li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 69 on the tax-exempt if you paid non-eligible retiring allowances</li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 71 on the tax-exempt employment income you paid </li>
+</ul></li>
+</ul>
 	 </div>
   </details>
 
